--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
     branches: [main]
   release:
-    types:
-      - created
+    types: [published]
 env:
   CARGO_TERM_COLOR: always
 
