--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "avanza"
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
+license = "MIT"
+authors = ["Ante Wall"]
+description = "Avanza Unofficial RUST API Client"
+repository = "https://github.com/AnteWall/avanza-rs"
+keywords = ["avanza", "finance", "api", "client", "trading"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
